# elrondJourney

./: README.md  user.pem
e02-crowdfunding/: Cargo.toml
e02-crowdfunding/e02-crowdfunding-web-app/: package-lock.json  package.json
e02-crowdfunding/interaction/: testnet.snippets.sh
e02-crowdfunding/mandos/: _generated_fund.scen.json  _generated_init.scen.json  _generated_query_status.scen.json  _generated_sc_err.scen.json  crowdfunding-claim-failed.scen.json  crowdfunding-claim-successful.scen.json  crowdfunding-claim-too-early.scen.json  crowdfunding-fund-too-late.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json  egld-crowdfunding-claim-failed.scen.json  (+4 more)
my-contract/: .gitignore
mycrowdfunding/: Cargo.toml
mycrowdfunding/mandos/: _generated_fund.scen.json  _generated_init.scen.json  _generated_query_status.scen.json  _generated_sc_err.scen.json  crowdfunding-claim-failed.scen.json  crowdfunding-claim-successful.scen.json  crowdfunding-fund-too-late.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json  egld-crowdfunding-claim-failed.scen.json  egld-crowdfunding-claim-successful.scen.json  egld-crowdfunding-claim-too-early.scen.json  egld-crowdfunding-fund-too-late.scen.json  egld-crowdfunding-fund.scen.json  egld-crowdfunding-init.scen.json
mycrowdfunding/meta/: Cargo.toml
mycrowdfunding/meta/src/: main.rs
mycrowdfunding/tests/: crowdfunding_esdt_mandos_rs_test.rs  crowdfunding_esdt_mandos_rust_test.rs  crowdfunding_esdt_rust_test.rs
mycrowdfunding/wasm/: Cargo.toml
mycrowdfunding/wasm/src/: lib.rs
(+13 files in other folders)
